[package]
name = "avif2png-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
rayon = "1.8.0"
indicatif = "0.17.7"
avif-decode = "0.2.2"
rgb="0.8.37"
lodepng = { version = "3.5.2", optional = false }